--- a/Front/src/app/app.component.html
+++ b/Front/src/app/app.component.html
@@ -12,6 +12,18 @@
           <span>{{ r.text }}</span>
         </a>
       </li>
+      <li *ngIf="!logged" nz-menu-item>
+        <a [routerLink]="['/login']">
+          <i nz-icon nzType="login" nzTheme="outline"></i>
+          <span>Iniciar sesion</span>
+        </a>
+      </li>
+      <li *ngIf="logged" nz-menu-item>
+        <a (click)="logout()">
+          <i nz-icon nzType="logout" nzTheme="outline"></i>
+          <span>Cerrar session</span>
+        </a>
+      </li>
     </ul>
   </nz-sider>
   <nz-layout>
@@ -22,9 +34,8 @@
     </nz-header>
     <nz-content>
       <div class="inner-content">
-        <router-outlet></router-outlet>
+        <router-outlet></router-outlet><br /><br />
       </div>
     </nz-content>
-    <nz-footer>Ant Design ©2019 Implement By Angular</nz-footer>
   </nz-layout>
 </nz-layout>
