--- a/Front/src/app/modules/temperature/temperature.component.html
+++ b/Front/src/app/modules/temperature/temperature.component.html
@@ -1,1 +1,13 @@
-<p>temperature works!</p>
+<div>
+  <div style="display:block;">
+    <canvas
+      baseChart
+      [data]="barChartData"
+      [labels]="barChartLabels"
+      [options]="barChartOptions"
+      [legend]="barChartLegend"
+      [chartType]="barChartType"
+    >
+    </canvas>
+  </div>
+</div>
