--- a/Front/src/app/modules/login/login.component.html
+++ b/Front/src/app/modules/login/login.component.html
@@ -12,7 +12,7 @@
       <input
         nz-input
         formControlName="username"
-        placeholder="Usuario001"
+        placeholder="Nombre de usuario o e-mail"
         type="text"
       />
       <ng-template #usernameErrorTpl let-control>
