--- a/Front/src/app/modules/temperature/temperature.component.html
+++ b/Front/src/app/modules/temperature/temperature.component.html
@@ -2,7 +2,7 @@
   <div style="display:block;">
     <canvas
       baseChart
-      [data]="barChartData"
+      [datasets]="barChartData"
       [labels]="barChartLabels"
       [options]="barChartOptions"
       [legend]="barChartLegend"
