--- a/Front/src/app/modules/curtains/curtains.component.html
+++ b/Front/src/app/modules/curtains/curtains.component.html
@@ -6,36 +6,14 @@
   <div nz-col nzSm="24" nzMd="8">
     <h4 nz-title>Mover a la izquierda</h4>
     <br />
-    <button
-      [disabled]="moving"
-      (click)="move('left')"
-      nz-button
-      nzType="primary"
-    >
+    <button (click)="move('7')" nz-button nzType="primary">
       <i nz-icon nzType="left-circle"></i>
-    </button>
-  </div>
-  <div nz-col nzSm="24" nzMd="8">
-    <h4 nz-title>Detener</h4>
-    <br />
-    <button
-      [disabled]="!moving"
-      (click)="move('stop')"
-      nz-button
-      nzType="primary"
-    >
-      <i nz-icon nzType="pause-circle"></i>
     </button>
   </div>
   <div nz-col nzSm="24" nzMd="8">
     <h4 nz-title>Mover a la derecha</h4>
     <br />
-    <button
-      [disabled]="moving"
-      (click)="move('right')"
-      nz-button
-      nzType="primary"
-    >
+    <button (click)="move('8')" nz-button nzType="primary">
       <i nz-icon nzType="right-circle"></i>
     </button>
   </div>
